--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Colima 2050</title>
 	<% include partials/styles%>
+
 </head>
 <body ng-app="Colima2050">
 	<%include partials/navbar%>
@@ -13,8 +14,10 @@
 		<div ui-view></div>
 	</div>
 	
-
-	<%include partials/scripts%>
+<%include partials/scripts%>
+	
 	<script src="/public/app/js/app.js"></script>
+	<script src="/public/app/js/controller.js"></script>
+
 </body>
 </html>
