--- a/public/app/views/inicio.html
+++ b/public/app/views/inicio.html
@@ -1,1 +1,77 @@
-<h1>Inicio</h1>
+<!-- Carrusel de presentación -->
+<section class="row">
+	
+</section>
+
+<!-- Cómo funciona -->
+<section class="row">
+	<div class="col-md-6">
+		<h2>¿Cómo funciona?</h2>
+		<p>
+			1.- Registra tu participación: Proporciona tanta información como puedas (ubicación, fecha, fotos, videos y cualquier otra fuente de confianza).
+
+			2.- Selecciona la categoría: Esto permitirá la atención, monitoreo y seguimiento puntual a tu participación.
+
+			3.- Clasifica tu participación: recuerda que puedes agregar lo que sueñas para Colima en el futuro; también propuestas específicas que te gustaría aportar para tu municipio o estado; además, puedes agregarte a nuestro grupo y participar activamente en espacios de tu interés.
+
+			4.- Envía: una vez reunida la información envía tu mensaje a través de nuestros medios de recepción disponibles: Web, Facebook, Twitter, Email.
+
+			Uno de nuestros colaboradores te contactará en caso de requerir mayor información sobre tu participación.
+		</p>
+	</div>
+	<div class="col-md-6">
+		<img src="/public/img/portada.png" alt="">
+	</div>
+	<div class="col-md-12 text-center">
+		<button class="btn btn-lg btn-success">Nueva Propuesta</button>
+		<button class="btn btn-lg btn-danger">Preguntar Ahora</button>
+	</div>
+</section>
+
+<!-- Resumen General -->
+<section class="row">
+	<h2>Resumen General</h2>
+	<!-- Contadores Generales -->
+	<div class="col-md-12 text-center">
+		<div class="col-sm-2 col-xs-4">01</div>
+		<div class="col-sm-2 col-xs-4">02</div>
+		<div class="col-sm-2 col-xs-4">03</div>
+		<div class="col-sm-2 col-xs-6">04</div>
+		<div class="col-sm-2 col-xs-6">05</div>
+	</div>
+	
+	<!-- Gráficas -->
+	<div class="col-md-12 text-center">
+		<div class="col-md-3">01</div>
+		<div class="col-md-3">02</div>
+		<div class="col-md-3">03</div>
+		<div class="col-md-3">04</div>
+	</div>
+</section>
+
+<!-- Últimas Participaciones -->
+<section class="row">
+	
+	<!-- como tabla -->
+	<div class="col-md-12 hidden-xs hidden-sm">
+		<table class="table table-hover table-striped">
+			<tr>
+				<th>
+					<span class="glyphicon glyphicon-calendar"></span>
+					<span>FECHA Y HORA</span>
+				</th>
+				<th>
+					
+				</th>
+			</tr>
+			<tr ng-repeat="">
+				
+			</tr>
+		</table>
+	</div>
+
+	<!-- como list-group -->
+	<div class="col-md-12 hidden-lg hidden-md">
+		
+	</div>
+</section>
