--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -7,10 +7,10 @@
 <script src="/public/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="/public/lib/angular-resource/angular-resource.min.js"></script>
 
+<script src="/public/lib/lodash/dist/lodash.min.js"></script>
+<script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
 
 <script>
-$(document).ready(function(){
 
 	$.material.init();
-})
 </script>
