--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,14 +1,20 @@
 <script src="/public/lib/jquery/dist/jquery.min.js"></script>
 <script src="/public/lib/angular/angular.min.js"></script>
-<!-- BMD -->
+<!-- Bootstrap -->
 <script src="/public/lib/bootstrap-material-design/dist/js/ripples.min.js"></script>
 <script src="/public/lib/bootstrap-material-design/dist/js/material.min.js"></script>
+<script src="/public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
 <!-- Angular -->
 <script src="/public/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="/public/lib/angular-resource/angular-resource.min.js"></script>
 
+<!-- Angular Google Maps -->
 <script src="/public/lib/lodash/dist/lodash.min.js"></script>
 <script src="/public/lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
+<!-- Chart.js -->
+<script src="/public/lib/chartjs/Chart.min.js"></script>
 
 <script>
 
