--- a/public/app/views/nueva-propuesta.html
+++ b/public/app/views/nueva-propuesta.html
@@ -79,17 +79,17 @@
 				<!-- BARRA FORMAS DE PARTICIPACION -->
 				<div class="col-md-12 text-center">
 					<div class="col-xs-4">
-						<div class="sueno" ng-click="datos.tipo = 'sueno'" 
+						<div class="sueno centered" ng-click="datos.tipo = 'sueno'" 
 						ng-class="{'opacar':datos.tipo != 'sueno' || forma.success}"></div>
 						<p>YO SUEÑO</p>
 					</div>
 					<div class="col-xs-4">
-						<div class="propongo" ng-click="datos.tipo = 'propongo'" 
+						<div class="propongo centered" ng-click="datos.tipo = 'propongo'" 
 						ng-class="{'opacar':datos.tipo != 'propongo' || forma.success}"></div>
 						<p>YO PROPONGO</p>
 					</div>
 					<div class="col-xs-4">
-						<div class="participo" ng-click="datos.tipo = 'participo'" ng-class="{'opacar':datos.tipo != 'participo' || forma.success}"></div>
+						<div class="participo centered" ng-click="datos.tipo = 'participo'" ng-class="{'opacar':datos.tipo != 'participo' || forma.success}"></div>
 						<p>YO PARTICIPO</p>
 					</div>
 					<hr>
