--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -16,7 +16,13 @@
 <!-- Chart.js -->
 <script src="/public/lib/chartjs/Chart.min.js"></script>
 
-<script>
+<!-- Slick -->
+<script src="/public/lib/slick.js/slick/slick.min.js"></script>
 
+<script>
 	$.material.init();
+</script>
+
+<script>
+	$('#carrusel').slick();
 </script>
