--- a/public/app/views/participaciones.html
+++ b/public/app/views/participaciones.html
@@ -1,1 +1,54 @@
-<h1>Participaciones</h1>
+<h1 class="light-green-text bold">Participaciones</h1>
+
+<div class="row">
+	<div class="col-md-12 hidden-xs hidden-sm">
+		<table class="table table-hover table-striped">
+			<!-- ENCABEZADOS -->
+			<tr>
+				<th>
+					<span class="glyphicon glyphicon-calendar"></span>
+					<span>FECHA Y HORA</span>
+				</th>
+				<th>
+					<span>TIPO DE PARTICIPACIÓN</span>
+				</th>
+				<th>
+					<span>CATEGORÍA</span>
+				</th>
+				<th>
+					<span>REPORTE</span>
+				</th>
+				<th>
+					<span>UBICACIÓN</span>
+				</th>
+			</tr>
+			<!-- ENTRADAS -->
+			<tr ng-repeat="reporte in reportes">
+				<td>
+					<span ng-bind="reporte.fecha | date:'dd/MM/yyyy'"></span><br>
+					<span ng-bind="reporte.fecha | date:'hh:mm'"></span>
+				</td>
+				<td>
+					<span ng-show="reporte.tipo == 'sueno'">
+						<p>
+						<div class="sueno logo-sm"></div>
+						<span>YO SUEÑO</span>
+						</p>
+					</span>
+					<span ng-show="reporte.tipo == 'propongo'">
+						<div class="propongo logo-sm"></div>
+						<span>YO PROPONGO</span>
+					</span>
+					<span ng-show="reporte.tipo == 'participo'">
+						<div class="participo logo-sm"></div>
+						<span>YO PARTICIPO</span>
+					</span>
+				</td>
+				<td><span ng-bind="datos['descripciones'][reporte.categoria]"></span></td>
+				<td><p ng-bind="reporte.descripcion" class='descripcion'></p></td>
+				<td><span ng-bind="reporte.ubicacion.direccion"></span></td>
+
+			</tr>
+		</table>
+	</div>
+</div>
