--- a/views/partials/styles.ejs
+++ b/views/partials/styles.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/public/lib/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/public/lib/bootstrap-material-design/dist/css/ripples.min.css">
 <link rel="stylesheet" href="/public/lib/bootstrap-material-design/dist/css/material.min.css">
+<link rel="stylesheet" href="/public/lib/slick.js/slick/slick.min.css">
 <link rel="stylesheet" href="/public/app/css/styles.css">
